--- a/devoctomy.Passchamp.Client/Resources/Styles/DefaultTheme.xaml
+++ b/devoctomy.Passchamp.Client/Resources/Styles/DefaultTheme.xaml
@@ -1,6 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:devoctomy.Passchamp.Client.Controls">
+
+    <Style x:Key="DefaultTabViewStyle" TargetType="controls:TabView">
+        <Setter Property="TextColour" Value="White" />
+        <Setter Property="TabBackColour" Value="{StaticResource Primary}" />
+        <Setter Property="TabAccentColour" Value="{StaticResource Primary}"/>
+        <Setter Property="SelectedTabAccentColour" Value="White"/>
+    </Style>
+
+    <Style BasedOn="{StaticResource DefaultTabViewStyle}" TargetType="controls:TabView">
+    </Style>
 
     <Style TargetType="ContentPage" ApplyToDerivedTypes="True">
         <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Background_light}, Dark={StaticResource Background_dark}}" />
