--- a/devoctomy.Passchamp.Client/Resources/Styles/DefaultTheme.xaml
+++ b/devoctomy.Passchamp.Client/Resources/Styles/DefaultTheme.xaml
@@ -77,6 +77,9 @@
         </Setter>
     </Style>
 
+    <Style BasedOn="{StaticResource DefaultButtonStyle}" TargetType="Button">
+    </Style>
+
     <Style x:Key="InfoButtonStyle" BasedOn="{StaticResource DefaultButtonStyle}" TargetType="Button">
         <Setter Property="TextColor" Value="White" />
         <Setter Property="BackgroundColor" Value="Green" />
@@ -90,6 +93,108 @@
     <Style x:Key="ErrorButtonStyle" BasedOn="{StaticResource DefaultButtonStyle}" TargetType="Button">
         <Setter Property="TextColor" Value="White" />
         <Setter Property="BackgroundColor" Value="Red" />
+    </Style>
+
+    <Style x:Key="DefaultRadioButtonStyle" TargetType="{x:Type RadioButton}">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource White}}" />
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="ControlTemplate">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Grid Margin="3,0,0,0">
+                        <Grid WidthRequest="21"
+                              HeightRequest="21"
+                              HorizontalOptions="Start"
+                              VerticalOptions="Center"
+                              Margin="3,0,0,0">
+                            <Ellipse x:Name="CheckBack"
+                                        Stroke="{StaticResource Gray500}"
+                                        StrokeThickness="3"
+                                        Fill="{AppThemeBinding Light={StaticResource Background_light}, Dark={StaticResource Background_dark}}"
+                                        HorizontalOptions="Center"
+                                        VerticalOptions="Center" />
+                            <Ellipse x:Name="Check"
+                                        Fill="{StaticResource Black}"
+                                        WidthRequest="14"
+                                        HeightRequest="14"
+                                        HorizontalOptions="Center"
+                                        VerticalOptions="Center" />
+                        </Grid>
+                        <ContentPresenter />
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroupList>
+                                <VisualStateGroup x:Name="CommonStates">
+                                    <VisualState x:Name="Normal" />
+                                    <VisualState x:Name="Focused" />
+                                    <VisualState x:Name="Disabled">
+                                        <VisualState.Setters>
+                                            <Setter TargetName="CheckBack"
+                                                Property="Ellipse.Fill"
+                                                Value="Red"/>
+                                        </VisualState.Setters>
+                                    </VisualState>
+                                </VisualStateGroup>
+
+                                <VisualStateGroup x:Name="CheckedStates">
+                                    <VisualState x:Name="Checked">
+                                        <VisualState.Setters>
+                                            <Setter TargetName="CheckBack"
+                                                Property="Ellipse.Fill"
+                                                Value="{StaticResource Primary}"/>
+                                            <Setter TargetName="Check"
+                                                Property="Opacity"
+                                                Value="1"/>
+                                        </VisualState.Setters>
+                                    </VisualState>
+                                    <VisualState x:Name="Unchecked">
+                                        <VisualState.Setters>
+                                            <Setter TargetName="CheckBack"
+                                                Property="Ellipse.Fill"
+                                                Value="{AppThemeBinding Light={StaticResource Background_light}, Dark={StaticResource Background_dark}}"/>
+                                            <Setter TargetName="Check"
+                                                Property="Opacity"
+                                                Value="0"/>
+                                        </VisualState.Setters>
+                                    </VisualState>
+                                </VisualStateGroup>
+                            </VisualStateGroupList>
+                        </VisualStateManager.VisualStateGroups>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <!--<Setter Property="VisualStateManager.VisualStateGroups">
+            <VisualStateGroupList>
+                <VisualStateGroup x:Name="CommonStates">
+                    <VisualState x:Name="Normal" />
+                    <VisualState x:Name="Disabled">
+                        <VisualState.Setters>
+                            <Setter Property="Background" Value="Red" />
+                        </VisualState.Setters>
+                    </VisualState>
+                </VisualStateGroup>
+            </VisualStateGroupList>
+        </Setter>-->
+    </Style>
+
+    <!--<Style BasedOn="{StaticResource DefaultRadioButtonStyle}" TargetType="RadioButton">
+    </Style>-->
+    
+    <Style TargetType="CheckBox">
+        <Setter Property="Color" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource White}}" />
+        <Setter Property="VisualStateManager.VisualStateGroups">
+            <VisualStateGroupList>
+                <VisualStateGroup x:Name="CommonStates">
+                    <VisualState x:Name="Normal" />
+                    <VisualState x:Name="Disabled">
+                        <VisualState.Setters>
+                            <Setter Property="Color" Value="{AppThemeBinding Light={StaticResource Gray300}, Dark={StaticResource Gray600}}" />
+                        </VisualState.Setters>
+                    </VisualState>
+                </VisualStateGroup>
+            </VisualStateGroupList>
+        </Setter>
     </Style>
 
 </ResourceDictionary>
