Added transient view model functionality to app shell pages after navigation is complete.  Seems like a bodge but apparently there's no other way.

--- a/devoctomy.Passchamp.Client/Pages/ThemeTestPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/ThemeTestPage.xaml
@@ -8,6 +8,7 @@
              Title="Theme"
              x:DataType="vm:ThemeTestViewModel"
              x:TypeArguments="vm:ThemeTestViewModel"
+             TransientViewModel="True"
              Padding="0">
     <controls:TabView>
         <controls:TabView.TabPages>
