Fixed issue with menu item icons and theme switching.

--- a/devoctomy.Passchamp.Client/Pages/VaultsPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/VaultsPage.xaml
@@ -7,6 +7,7 @@
              x:Class="devoctomy.Passchamp.Client.Pages.VaultsPage"
              x:DataType="vm:VaultsViewModel"
              x:TypeArguments="vm:VaultsViewModel"
+             TransientViewModel="True"
              Title="Vaults">
     <pages:BasePage.Content>
         <VerticalStackLayout>
