--- a/devoctomy.Passchamp.Client/App.xaml
+++ b/devoctomy.Passchamp.Client/App.xaml
@@ -7,10 +7,10 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Converters.xaml" />
                 <ResourceDictionary Source="Resources/Styles/SharedColours.xaml" />
                 <ResourceDictionary Source="Resources/Styles/DefaultColours.xaml" />
                 <ResourceDictionary Source="Resources/Styles/DefaultTheme.xaml" />
-                <!--<ResourceDictionary Source="Resources/Styles/Styles.xaml" />-->
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
