--- a/devoctomy.Passchamp.Client/Resources/Styles/DefaultTheme.xaml
+++ b/devoctomy.Passchamp.Client/Resources/Styles/DefaultTheme.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:devoctomy.Passchamp.Client.Controls"
              xmlns:converters="clr-namespace:devoctomy.Passchamp.Maui.Converters;assembly=devoctomy.Passchamp.Maui">
+    <!--<converters:BoolToColourConverter x:Key="BoolToColourConverter" />
+    <converters:ProviderServiceTypeIdToDisplayNameConverter x:Key="ProviderServiceTypeIdToDisplayNameConverter" />
+    <converters:NotNullConverter x:Key="NotNullConverter" />-->
 
     <Style x:Key="DefaultTabViewStyle" TargetType="controls:TabView">
         <Setter Property="TextColour" Value="White" />
@@ -104,9 +107,6 @@
             <Setter.Value>
                 <ControlTemplate>
                     <Grid x:Name="grid" Margin="3,0,0,0">
-                        <Grid.Resources>
-                            <converters:BoolToColourConverter x:Key="BoolToColourConverter" />
-                        </Grid.Resources>
                         <Grid WidthRequest="21"
                               HeightRequest="21"
                               HorizontalOptions="Start"
@@ -166,7 +166,7 @@
     </Style>
     
     <Style TargetType="CheckBox">
-        <Setter Property="Color" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource White}}" />
+        <Setter Property="Color" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource Primary}}" />
         <Setter Property="VisualStateManager.VisualStateGroups">
             <VisualStateGroupList>
                 <VisualStateGroup x:Name="CommonStates">
