--- a/devoctomy.Passchamp.Client/Resources/Styles/DefaultColours.xaml
+++ b/devoctomy.Passchamp.Client/Resources/Styles/DefaultColours.xaml
@@ -2,10 +2,16 @@
 <?xaml-comp compile="true" ?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
-
+    
     <Color x:Key="Primary">#F7B548</Color>
+    <Color x:Key="PrimaryDark">#F7B548</Color>
+    <Color x:Key="PrimaryDarkText">#242424</Color>
+
     <Color x:Key="Secondary">#FFD590</Color>
+    <Color x:Key="SecondaryDarkText">#FFD590</Color>
+    
     <Color x:Key="Tertiary">#FFE5B9</Color>
+    
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
 
@@ -13,15 +19,10 @@
     <Color x:Key="Warning">Orange</Color>
     <Color x:Key="Danger">Red</Color>
 
+    <Color x:Key="Yellow50Accent">#E0A441</Color>
     <Color x:Key="Yellow100Accent">#F7B548</Color>
     <Color x:Key="Yellow200Accent">#FFD590</Color>
     <Color x:Key="Yellow300Accent">#FFE5B9</Color>
-    <Color x:Key="Cyan100Accent">#28C2D1</Color>
-    <Color x:Key="Cyan200Accent">#7BDDEF</Color>
-    <Color x:Key="Cyan300Accent">#C3F2F4</Color>
-    <Color x:Key="Blue100Accent">#3E8EED</Color>
-    <Color x:Key="Blue200Accent">#72ACF1</Color>
-    <Color x:Key="Blue300Accent">#A7CBF6</Color>
 
     <Color x:Key="Background_light">#E1E1E1</Color>
     <Color x:Key="Background_dark">#212121</Color>
